# onvif-server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-ONVIF  README.md  SECURITY.md  build.rs  release-please-config.json
.github/workflows/: ci.yml  docs.yml  layer2.yml  publish.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/reviews/: round-1-onvif-server-claude.md  (+2 more)
book/: book.toml
crossref/: Cargo.toml  PHASE2B-FINDINGS.md  README.md  docker-compose.local.yml  docker-compose.yml  expected-failures.toml  manifest.toml
crossref/comparators/: controlled-server.Dockerfile
crossref/comparators/onvif-srvd/: Dockerfile  NOTES.md
crossref/comparators/oracle/: Dockerfile  SCHEMAS.md  extract-schemas.py
crossref/comparators/oracle/src/main/java/crossref/oracle/: Oracle.java
crossref/comparators/oracle/src/main/resources/schemas/: common.xsd  device-body.xsd  events-body.xsd  imaging-body.xsd  media-body.xsd  onvif.xsd  ptz-body.xsd  soap-envelope.xsd  ws-addr.xsd  wsn-b2.xsd  xmlmime.xsd
crossref/scenarios/: device_get_capabilities.request.xml  device_get_capabilities.toml  device_get_device_information_authed.request.xml  device_get_device_information_authed.toml  device_get_device_information_bad_auth.request.xml  device_get_device_information_bad_auth.toml  device_get_device_information_missing_auth.request.xml  device_get_device_information_missing_auth.toml  device_get_hostname.request.xml  device_get_hostname.toml  device_get_network_interfaces.request.xml  device_get_network_interfaces.toml  device_get_scopes.request.xml  device_get_scopes.toml  device_get_services.request.xml  device_get_services.toml  device_get_system_date_and_time.request.xml  device_get_system_date_and_time.toml  discovery_probe.request.xml  discovery_probe_match.toml  events_create_pullpoint.request.xml  events_get_event_properties.request.xml  events_get_event_properties.toml  events_pull_messages.toml  events_pull_messages_step.request.xml  events_unknown_subscription.request.xml  events_unknown_subscription.toml  imaging_get_imaging_settings.request.xml  imaging_get_imaging_settings.toml  media_get_profiles.request.xml  media_get_profiles.toml  media_get_snapshot_uri.request.xml  media_get_snapshot_uri.toml  media_get_stream_uri.request.xml  media_get_stream_uri.toml  media_get_video_encoder_configurations.request.xml  media_get_video_encoder_configurations.toml  media_get_video_source_configurations.request.xml  media_get_video_source_configurations.toml  media_get_video_sources.request.xml  (+19 more)
crossref/snapshots/: device_get_capabilities.xml  device_get_device_information_authed.xml  device_get_hostname.xml  device_get_network_interfaces.xml  device_get_scopes.xml  device_get_services.xml  device_get_system_date_and_time.xml  discovery_probe_match.xml  events_get_event_properties.xml  events_pull_messages.step0.xml  events_pull_messages.step1.xml  imaging_get_imaging_settings.xml  media_get_profiles.xml  media_get_snapshot_uri.xml  media_get_stream_uri.xml  media_get_video_encoder_configurations.xml  media_get_video_source_configurations.xml  media_get_video_sources.xml  ptz_absolute_move.xml  ptz_absolute_move_malformed_coord.xml  ptz_continuous_move.xml  ptz_get_configuration_options.xml  ptz_get_configurations.xml  ptz_get_nodes.xml  ptz_get_status.xml  ptz_relative_move.xml  ptz_stop.xml  status.toml
crossref/snapshots/canonical/: device_get_capabilities.c14n  device_get_device_information_authed.c14n  device_get_device_information_bad_auth.c14n  device_get_device_information_missing_auth.c14n  device_get_hostname.c14n  device_get_network_interfaces.c14n  device_get_scopes.c14n  device_get_services.c14n  device_get_system_date_and_time.c14n  discovery_probe_match.c14n  events_get_event_properties.c14n  events_pull_messages.step0.c14n  events_pull_messages.step1.c14n  events_unknown_subscription.c14n  imaging_get_imaging_settings.c14n  media_get_profiles.c14n  media_get_snapshot_uri.c14n  media_get_stream_uri.c14n  media_get_video_encoder_configurations.c14n  media_get_video_source_configurations.c14n  media_get_video_sources.c14n  ptz_absolute_move.c14n  ptz_absolute_move_malformed_coord.c14n  ptz_continuous_move.c14n  ptz_get_configuration_options.c14n  ptz_get_configurations.c14n  ptz_get_nodes.c14n  ptz_get_status.c14n  ptz_relative_move.c14n  ptz_stop.c14n
crossref/src/: body_extract.rs  drift.rs  fixture.rs  invariants.rs  lib.rs  masks.rs  normalize.rs  projection.rs  scenario.rs  sut.rs
crossref/src/layer2/: compose.rs  mod.rs  report.rs  verdict.rs
crossref/tests/: layer1_replay.rs
docs/: DESIGN.md  historical-design.md  roadmap.md
examples/: minimal_device.rs  virtual_ptz.rs
src/: constants.rs  discovery.rs  error.rs  lib.rs  server.rs  wsdl_loader.rs
tests/: device_management.rs  events_service.rs  foundation.rs  frigate_compat.rs  imaging_service.rs  into_router.rs  media_service.rs  odm_smoke.rs  ptz_service.rs  round2_caps.rs  round2_fixes.rs
wsdl/: ptz.wsdl  ws-addr.xsd  wsn-b2.xsd  wsn-bw2.wsdl  wsn-t1.xsd  wsrf-rw2.wsdl  xop-include.xsd
(+76 files in other folders)
