[package]
name = "onvif-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A spec-compliant ONVIF device server library for Rust"
exclude = ["/crossref"]

[features]
default = []
discovery = ["socket2"]

[dependencies]
# `version` is REQUIRED for crates.io publish (a path-only dep is rejected); `path`
# is used for local/workspace builds. Publish order: soap-server 0.1.0 first, then this.
soap-server = { version = "0.1.0", path = "../soap-server" }
tokio = { version = "1", features = ["rt", "net", "sync"] }
axum = "0.8"
async-trait = "0.1"
thiserror = "2"
bytes = "1"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
uuid = { version = "1", features = ["v4"] }
quick-xml = "0.39"
serde = { version = "1", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
soap-server = { path = "../soap-server" }
axum-test = "20"
async-trait = "0.1"

[workspace]
members = ["crossref"]
