[package]
name = "onvif-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.1"
authors = ["Joshua Hogendorn <jhogendorn@gmail.com>", "NavistAu"]
license = "MIT OR Apache-2.0"
description = "A spec-compliant ONVIF Profile S device server library for Rust"
readme = "README.md"
repository = "https://github.com/NavistAu/onvif-server"
homepage = "https://github.com/NavistAu/onvif-server"
documentation = "https://docs.rs/onvif-server"
keywords = ["onvif", "camera", "soap", "ip-camera", "video"]
categories = ["network-programming", "multimedia::video"]
# Allowlist exactly what ships in the published crate (nothing leaks by default).
# wsdl/** is mandatory — the embedded loader include_bytes!()s every file.
# cargo also auto-adds Cargo.toml.orig, Cargo.lock, and .cargo_vcs_info.json.
include = [
    "src/**/*.rs",
    "wsdl/**",
    "examples/**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "LICENSE-ONVIF",
]

[features]
default = []
discovery = ["socket2"]

[dependencies]
# `version` is REQUIRED for crates.io publish (a path-only dep is rejected); `path`
# is used for local/workspace builds. Publish order: soap-server 0.1.0 first, then this.
soap-server = { version = "0.1.0", path = "../soap-server" }
tokio = { version = "1", features = ["rt", "net", "sync"] }
axum = "0.8"
async-trait = "0.1"
thiserror = "2"
bytes = "1"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
uuid = { version = "1", features = ["v4"] }
quick-xml = "0.39"
serde = { version = "1", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
soap-server = { version = "0.1.0", path = "../soap-server" }
axum-test = "20"
async-trait = "0.1"

[workspace]
members = ["crossref"]
