[package]
name = "onvif-crossref"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
onvif-server = { path = ".." }
soap-server = { path = "../../soap-server" }
quick-xml = "0.39"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bytes = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
axum-test = "20"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1"

[dev-dependencies]
similar-asserts = "1"
